minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: default
spec:
  ports:
  - name: api
    nodePort: 32733
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    nodePort: 31718
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  type: LoadBalancer
